# smapper_api

./: .env  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt  spawn_api.sh
app/: dependencies.py  exceptions.py  lifespan.py  logger.py  main.py  settings.py
app/api/v1/: __init__.py
app/config/: __init__.py  api_config.py  api_settings.py  config.py  device.yaml  device_settings.py  managers_settings.py  settings.py
app/core/: bag_manager.py  exceptions.py  lifespan.py  logger.py  recording_manager.py  service_manager.py
app/core/managers/: __init__.py  recording_manager.py  service_manager.py
app/core/processes/: __init__.py  logger.py  process_handler.py  process_pool.py
app/core/ros/: ros_factory.py  topic_monitor.py
app/core/services/: __init__.py  base_service.py  ros_service.py  rosbag_service.py  service.py
app/crud/: rosbag.py
app/db/: database.py
app/di/: __init__.py  ros.py  services.py  settings.py
app/logging/: __init__.py  logger.py
app/models/: rosbag_metadata.py  rosbag_topic.py
app/routers/: scans.py  sensors.py
app/routers/v1/: __init__.py  bags.py  power.py  recordings.py  ros.py  sensors.py  services.py
app/schemas/: __init__.py  bags.py  onboard_pc.py  recording.py  ros.py  rosbag.py  scan_schemas.py  sensors.py  sensors_schemas.py  service.py  services.py
app/schemas/ros/: rosbag.py  topic.py
app/utils/: files.py  ros.py  rosbag.py  system_services.py
config/: api_config.yaml  autosense_settings.yaml  device_config.yaml  settings.yaml
tests/: test_rest_api.py  test_service.py  test_service_manager.py
tests/processes/: test_process_handler.py
(+11 files in other folders)
