[project]
name = "s_mapper_api"
version = "0.1.0"
description = "API for Smapper handheld device"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.115.2",
    "pydantic-settings>=2.6.0",
    "pymongo>=4.10.1",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
]
# dbus-python = "1.3.2"
# PyGObject = "3.50.0"
# lark = "^1.2.2"
# numpy = "^2.1.2"
