[project]
name = "s_mapper_api"
version = "1.0.1"
description = "API for Smapper handheld device"
readme = "README.md"
license = "GPL-3.0"
requires-python = ">=3.10"
dependencies = [
    "coloredlogs>=15.0.1",
    "colorlog>=6.9.0",
    "fastapi[standard]>=0.115.2",
    "lark>=1.2.2",
    "numpy>=2.1.0",
    "psutil>=7.0.0",
    "pybase62>=1.0.0",
    "pydantic-settings>=2.6.0",
    "pytest>=8.3.3",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "simplejpeg>=1.8.2",
    "sqlalchemy>=2.0.40",
    "tornado>=6.5.1",
    "zipstream-new>=1.1.8",
]
